# Dragon

./: README.md
Dragon/: CMakeLists.txt  main_install.sh  py_install.bat  py_install.sh
Dragon/examples/cifar10/: CMakeLists.txt  convert_cifar10.bat  convert_cifar10.cpp  convert_cifar10.sh  readme.md  run_cifar10_quick.bat  run_cifar10_quick.sh  run_cifar10_quick_mpi_2.sh
Dragon/examples/cifar10/cifar10_quick/: cifar10_quick_solver.prototxt  cifar10_quick_train_test.prototxt
Dragon/examples/cifar10/cifar10_quick_mpi_2/: cifar10_quick_solver.prototxt  cifar10_quick_train_test.prototxt
Dragon/ext/python/dragon/: __init__.py
Dragon/include/: common.hpp  data_reader.hpp  data_transformer.hpp  dragon_thread.hpp  solver.hpp
Dragon/include/layers/mpi/: mpi_broadcast_layer.hpp  mpi_gather_layer.hpp
Dragon/include/solvers/: gradient_solver.hpp
Dragon/include/utils/: flags.hpp  io.hpp  logging.hpp  math.hpp
Dragon/src/: common.cpp  data_reader.cpp  data_transformer.cpp  dragon_thread.cpp  net.cpp  solver.cpp
Dragon/src/layers/common/: eltwise_layer.cpp
Dragon/src/layers/data/: data_layers.cpp
Dragon/src/layers/mpi/: mpi_broadcast_layer.cpp  mpi_gather_layer.cpp
Dragon/src/layers/vision/: base_conv_layer.cpp  roi_pooling_layer.cu
Dragon/src/parallel/: parameter_server.cpp
Dragon/src/protos/: dragon.proto
Dragon/src/solvers/: sgd_solver.cpp
Dragon/src/utils/: blocking_queue.cpp  flags.cpp  logging.cpp
Dragon/targets/exec/: CMakeLists.txt  main.cpp
Dragon/targets/python/: CMakeLists.txt  _dragon.cpp
